--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       "no-unused-vars": 1
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seanperez29/foodtruck-api.git"
+  },
   "author": "Sean Perez <sean.perez29@gmail.com>",
   "license": "ISC",
   "dependencies": {
